--- a/css/home.css
+++ b/css/home.css
@@ -12,9 +12,16 @@ body{
     border-color: #F7FFF7;
 }
 
-.navbar-light .navbar-toggler {
-    color: #F7FFF7!important;
-    border-color:#F7FFF7;
+.navbar-light .navbar-brand {
+    color: white;
+}
+
+.navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
+    color: white;
+}
+
+.navbar-light .navbar-nav .nav-link {
+    color: white;
 }
 
 .form-control{
@@ -49,6 +56,10 @@ body{
 
 .buddy{
     margin-top:80%;
+}
+
+.land{
+  margin-bottom:20%;
 }
 
 .col{
