--- a/css/home.css
+++ b/css/home.css
@@ -73,4 +73,11 @@ body{
     .col{
         padding-left:0;
     }
+    .branch-2{
+        margin-top: 15%;
+    }
+
+    .branch-3{
+        margin-top: 15%;
+    }
 }
