--- a/css/style.css
+++ b/css/style.css
@@ -38,3 +38,33 @@ body{
 .bg-bot{
 	margin-bottom: 0px
 }
+
+/* STYLING FOR THE NAV BAR */
+.bg-light {
+    background-color: #3E537F!important;
+}
+
+.btn-outline-success {
+    color: #F7FFF7;
+    border-color: #F7FFF7;
+}
+
+.navbar-light .navbar-brand {
+    color: white;
+}
+
+.navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
+    color: white;
+}
+
+.navbar-light .navbar-nav .nav-link {
+    color: white;
+}
+
+.form-control{
+    width:65%;
+}
+
+.btn{
+    margin-left: .5em;
+}
