--- a/css/main.css
+++ b/css/main.css
@@ -11,11 +11,11 @@ h1, h2{
 }
 
 h3, h4{
-    color: #3eb8a5;
+    color: #3E537F;
 }
 
 /* STYLING FOR THE NAV BAR */
-.bg-light {
+.bg-dark {
     background-color: #3E537F!important;
 }
 
@@ -40,17 +40,17 @@ h3, h4{
     border-color: #3eb8a5;
 }
 
-.navbar-light .navbar-brand {
+.navbar-dark .navbar-brand {
     color: #3eb8a5;
 }
 
-.navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
+.navbar-dark .navbar-nav .active>.nav-link, .navbar-dark .navbar-nav .nav-link.active, .navbar-dark .navbar-nav .nav-link.show, .navbar-dark .navbar-nav .show>.nav-dark {
     color: white;
 }
 
-.navbar-light .navbar-nav .nav-link {
+.navbar-dark .navbar-nav .nav-link {
     color: white;
 }
-.navbar-light .navbar-nav .nav-link:hover {
+.navbar-dark .navbar-nav .nav-link:hover {
     color: #3eb8a5;
 }
